<resources>
    <string name="app_name">koro</string>
    <string name="button_load_quote">Load quote</string>
    <string name="button_save_quote">Save quote</string>
    <string name="button_clear_quote">Clear</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="menu_logout">Logout</string>
</resources>
