<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="kioli.koro.ui.ui.IntroActivity">

    <TextView
        android:id="@+id/quote_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/btn_load_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_load_quote"/>

        <Button
            android:id="@+id/btn_save_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_quote"/>

        <Button
            android:id="@+id/btn_clear_quote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_clear_quote"/>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDim"
        android:visibility="gone">

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
</RelativeLayout>